--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/navigation_home"
@@ -10,6 +11,11 @@
         android:id="@+id/navigation_categories"
         android:icon="@drawable/ic_apps_black_24dp"
         android:title="@string/title_categories" />
+
+    <item
+        android:id="@+id/navigation_bmi"
+        android:icon="@drawable/ic_exposure_black_24dp"
+        android:title="@string/title_activity_calculate_bmi" />
 
     <item
         android:id="@+id/navigation_favorite"
